fixed alignment on applicant list search results heading

--- a/themes/Intervue/less/style.less
+++ b/themes/Intervue/less/style.less
@@ -2140,6 +2140,12 @@ th.coverLetter { width: 100px; }
 	min-width: 205px;
 } 
 
+#applicantList #searchForm .searchedFor {
+	position: absolute;
+	top: 10px;
+	right: 0;
+}
+
 /*HR Applications List ---------------------------------------------------------- */
 
 #hrListJobs {
